www/css- ensure x-msg-pane is full width on small channels needed since the date hr's were added

--- a/www/chat/css/style.css
+++ b/www/chat/css/style.css
@@ -300,6 +300,7 @@ x-messages {
 x-msg-pane {
   display: block;
   overflow-y: auto;
+  width: 100%;
 }
 x-msg-pane > fieldset {
   border-width: 0;
