--- a/www/chat/css/x/x-messages.scss
+++ b/www/chat/css/x/x-messages.scss
@@ -16,6 +16,7 @@ x-messages {
 x-msg-pane {
     display: block;
     overflow-y: auto;
+    width: 100%;
 
     >fieldset {
         border-width: 0;
